fix(web): reduce ProgressReport flickering (#1395)
## Problem

ProgressReport component is using the PF/ProgressStepper in a dynamic
way, which produces quite a few annoying UI flickering.

See
https://github.com/openSUSE/agama/issues/1373#issuecomment-2191899200


## Solution

To mitigate these flickering by forcing a fixed _inline-size_ for each
step and making use of the PatternFly/Truncate component.

A final solution needs more time to think about the whole component.

--- a/web/src/assets/styles/patternfly-overrides.scss
+++ b/web/src/assets/styles/patternfly-overrides.scss
@@ -336,10 +336,8 @@ table td > .pf-v5-c-empty-state {
 }
 
 .pf-v5-c-progress-stepper.progress-report {
+  .pf-v5-c-progress-stepper__step-connector,
   .pf-v5-c-progress-stepper__step-main {
-    inline-size: 220px;
-    display: flex;
-    flex-direction: column;
-    row-gap: 1em;
+    inline-size: 250px;
   }
 }
